2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: [automated] Removed UPDATED.

2005-06-05 David A. Sosa Cabrera <neon@intelso.org>
	* Spell created
