@@ -1,3 +1,8 @@
+2006-10-25 Flavien Bridault <vlaaad@sourcemage.org>
+	* profile.d/jmf.sh: Set CLASSPATH and LD_LIBRARY_PATH for proper use
+	* INSTALL: installs the script
+	* DETAILS: PATCHLEVEL++ 
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
